--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "homepage": "https://Ise2005.github.io/Tanabe-Castle-WebApp",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp -r dist docs",
-    "rebuild": "vite build && rm -R docs && cp -r dist docs",
+    "build": "vite build",
     "git": "git add . && git commit && git push origin main",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
